@@ -1,3 +1,8 @@
+2001-12-31  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : Fix EOL handling for DOS \r\n patterns as 
+	reported by David Dawkins.
+
 2001-12-11  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/get-structs-from-source.pl : New define-struct extractor.
